# test_repo

./: .gitignore  README.md  pyproject.toml
.zen/: config.yaml
apps/graph_gen_pipeline/: graph_gen.py
apps/parsing_pipeline/: main.py
apps/uc_pipeline/: uc.py
apps/validation_pipeline/: validation.py
infrastructure/zenml/: Dockerfile  dag_generator_custom.py  requirements.txt  run.py
infrastructure/zenml/gitpush_dags/: gitpush.py
infrastructure/zenml/steps/: __init__.py  evaluation.py  graph_gen.py  parsing.py  uc.py  validation.py
infrastructure/zenml/steps/apps/parsing_pipeline/: parser.py
infrastructure/zenml/steps/apps/validation_pipeline/: validation.py
