[project]
name = "zenml-test"
version = "0.1.0"
description = ""
authors = [
    {name = "tsunghaochen",email = "tsunghao.chen@axa.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "zenml (==0.81.0)",
    "pip-system-certs (>=4.0,<5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
